# schedulingAgent

./: .gitignore
bedrock/: .gitignore  DEPLOY.sh  DOCUMENTATION_UPDATE_SUMMARY.md  EXECUTIVE_STATUS_REPORT.md  FILE_ORGANIZATION_SUMMARY.md  GIT_BRANCH_UPDATE_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  NEXT_ACTION_ITEMS.md  PRODUCTION_IMPLEMENTATION.md  README.md  ROLLBACK.sh  START_HERE.md  STATUS_REPORT_24OCT2025.md
bedrock/agent-instructions/: information-agent-instructions.txt  notes-agent-instructions.txt
bedrock/archive/: README.md
bedrock/archive/backend-langgraph/: README.md  pyproject.toml  requirements.txt
bedrock/archive/backend-langgraph/app/: __init__.py  main.py
bedrock/archive/backend-langgraph/app/api/: chat.py
bedrock/archive/backend-langgraph/app/core/: __init__.py  bedrock_agent.py  database.py  logging.py
bedrock/archive/backend-langgraph/app/models/: __init__.py  appointment.py  conversation.py  customer.py  session.py
bedrock/archive/backend-langgraph/app/schemas/: chat.py
bedrock/archive/backups/: DEPLOY.sh.backup  DEPLOY.sh.backup2  DEPLOY.sh.backup3  DEPLOY.sh.backup4
bedrock/archive/docs/: ACTION_GROUPS_QUICK_SETUP.md  AGENT_INSTRUCTIONS_UPDATE_CHECKLIST.md  AWS_CLI_UPDATE_READY.md  AWS_CONSOLE_FIX.md  COLLABORATOR_ALIAS_ISSUE.md  COMPLETE_FIX_DEPLOYMENT.md  COMPLETE_SETUP_WORKFLOW.md  CONSOLE_DIRECT_TEST.md  FINAL_FIX_SUMMARY.md  HALLUCINATION_ISSUE_SUMMARY.md  ISSUE_RESOLVED_NEXT_STEPS.md  QUICK_FIX_GUIDE.md
bedrock/archive/reference-planning-docs/: project-implementation-plan-phase1.md  project-implementation-plan.md
bedrock/archive/scripts/: configure_action_groups.sh  recreate_supervisor.py  setup_agents_from_scratch.py  test_agent_with_session.py  update_agent_instructions.sh  update_aliases_to_draft.py  update_collaborator_aliases.sh  update_collaborator_aliases_simple.sh  update_collaborator_aliases_v2.sh
bedrock/archive/tests/: comprehensive_test.py  old-README.md
bedrock/backend/: .env.example  pyproject.toml
bedrock/backend/scripts/: verify_setup.py
bedrock/docs/: 403_ERROR_RESOLUTION.md  ACTION_GROUPS_SETUP_GUIDE.md  AGENT_INSTRUCTIONS_ACTION_REFERENCE.md  API_DOCUMENTATION_README.md  API_MIGRATION_COMPLETED.md  API_MIGRATION_IMPLEMENTATION_PLAN.md  API_MIGRATION_PLAN.md  API_MIGRATION_README.md  ARCHITECTURE.md  ARCHITECTURE_RESEARCH.md  AWS_BEDROCK_COMPLETE_SETUP_GUIDE.md  AWS_SETUP_GUIDE.md  AWS_SETUP_STEP_BY_STEP.md  AWS_SUPPORT_CASE.md  AWS_SUPPORT_CASE_SUBMISSION_GUIDE.md  B2B_IMPLEMENTATION_SUMMARY.md  B2B_MULTI_CLIENT_INTEGRATION_GUIDE.md  BEDROCK_LAMBDA_INTEGRATION_GUIDE.md  BULK_OPS_API_DOCS.html  BULK_OPS_API_SWAGGER.yaml  BULK_OPS_POSTMAN_COLLECTION.json  BULK_SCHEDULING_DESIGN.md  BULK_SCHEDULING_SUMMARY.md  CHITCHAT_AGENT_SETUP.md  CLEANUP_REPORT.md  COMPLETE_FLOW_TEST_RESULTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SOLUTION.md  DOCUMENTATION_INDEX.md  HALLUCINATION_FIX_GUIDE.md  IMPROVEMENTS_V2.md  INFORMATION_AGENT_SETUP.md  LAMBDA_DEPLOYMENT_GUIDE.md  LAMBDA_MOCK_IMPLEMENTATION.md  MOCK_API_TESTING_RESULTS.md  MOCK_DATA_REFERENCE.md  MONITORING_SETUP_GUIDE.md  NOTES_AGENT_SETUP.md  PF360_API_ANALYSIS.md  PHASE1_GETTING_STARTED.md  (+19 more)
bedrock/docs/_archive/: GETTING_STARTED.md
bedrock/docs/archive/: ARCHIVE_LOG.md
bedrock/docs/existingapp-docs/: README.md
bedrock/docs/phase2/: PHASE2_AWS_SMS_RESEARCH.md  PHASE3_US_PHONE_SETUP.md
bedrock/docs/phase3/: PHASE3_AISPL_ACCOUNT_WORKAROUND.md  PHASE3_AWS_CONNECT_RESEARCH.md  PHASE3_INDIAN_PHONE_SETUP.md
bedrock/frontend/: DEMO_GUIDE.md  README.md  SUMMARY.txt  agent_config.json  package.json  start.sh
bedrock/frontend/backend/: .gitignore  app.py  test_comprehensive_routing.py  test_frontend_routing.py
bedrock/frontend/frontend/: .gitignore  index.html  package.json  (+1 more)
bedrock/infrastructure/: aurora.tf  bedrock.tf  iam.tf  main.tf  networking.tf  outputs.tf  redis.tf  secrets.tf  tfplan  variables.tf
bedrock/lambda/: build_lambda.sh  test_all_actions.py  test_all_actions_v2.py  test_complete_flows.py
bedrock/pf-requirements/: prd.txt
bedrock/scripts/: README.md  README_AGENT_INSTRUCTIONS_UPDATE.md  complete_setup.py  configure_pf_agents.py  deploy_lambda_functions.sh  deploy_lambdas.sh  gather_diagnostics.sh  init_database.sh  setup_monitoring.sh  test_lambdas.sh  verify_deployment.sh
bedrock/tests/: README.md  run_tests.sh  test_agent.py  test_agent_action_groups.py  test_agents_interactive.py  test_api_access.py  test_production.py
bedrock/utils/: README.md  prepare_all_agents.py
reference/: project-implementation-plan.md
(+158 files in other folders)
